@@ -3,8 +3,9 @@ openssl (0.9.8o-3) unstable; urgency=high
   * Fix TLS extension parsing race condition (CVE-2010-3864) (Closes: #603709)
   * Re-add the engines.  Patch by Joerg Schneider. (Closes: #603693)
   * Not all architectures were build using -g (Closes: #570702)
+  * Add powerpcspe support (Closes: #579805)
 
- -- Kurt Roeckx <kurt@roeckx.be>  Tue, 16 Nov 2010 19:01:06 +0100
+ -- Kurt Roeckx <kurt@roeckx.be>  Tue, 16 Nov 2010 19:20:55 +0100
 
 openssl (0.9.8o-2) unstable; urgency=high
 
